@@ -123,7 +123,8 @@ checkFreeVariablesHelper <- function(matrix, startVals, freeVars,
 			value <- values[[i]]
 			lbound <- lbounds[[i]]
 			ubound <- ubounds[[i]]
-			if (omxIsDefinitionVariable(label)) {			} else if (isFree) {
+			if (omxIsDefinitionVariable(label)) {
+			} else if (isFree) {
 				if (label %in% fixedVars) {
 					stop(paste("The label", omxQuotes(label),
 						"has been assigned to a free parameter",
@@ -132,11 +133,13 @@ checkFreeVariablesHelper <- function(matrix, startVals, freeVars,
 					stop(paste("The free parameter", omxQuotes(label),
 						"has been assigned multiple starting values!"),
 						 call. = FALSE)
-				} else if (label %in% freeVars && !identicalNA(lbound, bounds[[label]][[1]])) {
+				} else if (label %in% freeVars && 
+								!identicalNA(lbound, bounds[[label]][[1]])) {
 					stop(paste("The free parameter", omxQuotes(label),
 						"has been assigned multiple lower bounds!"),
 						 call. = FALSE)
-				} else if (label %in% freeVars && !identicalNA(ubound, bounds[[label]][[2]])) {
+				} else if (label %in% freeVars && 
+								!identicalNA(ubound, bounds[[label]][[2]])) {
 					print(typeof(ubound))
 					print(typeof(bounds[[label]][[2]]))
 					stop(paste("The free parameter", omxQuotes(label),
